KUBE_RESOURCES/PM1_Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend-prod # Name of the deployment., will be used during creation of service
    labels:
      app: frontend
      version: prod

spec:
    replicas: 1
    selector:
        matchLabels:
            app: frontend  # all pods with frontend are part of this deployment, This must match with the pods name.
            version: prod
    template: # Describes the pods that will be used for the deployment.
        metadata:
            labels: # Same labels are set for all pods.
                app: frontend
                version: prod
        spec:
            containers: # List of containers running in each pod.
                - name: frontend
                  image: ishanbhatt/prefix-part1:fixed  # repo/image:tag
                  imagePullPolicy: IfNotPresent
                  ports:
                    - containerPort: 6756
