KUBE_RESOURCES/PM1_Service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend
  labels:
    app: frontend

spec:
  selector:
    app: frontend
  type: LoadBalancer
  ports:
    - port: 6756
      targetPort: 6756
      name: http
