KUBE_RESOURCES/routing-1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destination-frontend
spec:
  host: frontend
  subsets:
    - name: v1
      labels:
        version: prod
    - name: v2
      labels:
        version: canary
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-route
spec:
  hosts:
  - frontend
  http:
  - route:
    - destination:
        host: frontend
        subset: v1

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destination-backend
spec:
  host: backend
  subsets:
    - name: v1
      labels:
        version: prod
    - name: v2
      labels:
        version: canary
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-route
spec:
  hosts:
  - backend
  http:
  - route:
    - destination:
        host: backend
        subset: v1
