KUBE_RESOURCES/weighted-routing-1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destination-backend
spec:
  host: backend
  subsets:
    - name: v1
      labels:
        version: prod
    - name: v2
      labels:
        version: canary
---
# Weighted - routing
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-route
spec:
  hosts:
  - backend
  http:
  - route:
    - destination:
        host: backend
        subset: v2
      weight: 10
    - destination:
        host: backend
        subset: v1
      weight: 90
